# svelte-calculator

./: .gitignore  LICENSE  README.md  package.json  tailwind.config.ts  vite.config.ts
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/routes/: +page.svelte
